src/test/contracts/negative/interpreter_tests/bad_record_field_assign2.jsligo
// p.x["z"] = a |> p.x.z = a

type p = {
    x : { z : int }
}

const test = ((() => {
  let p = { x : { z : 1 } };
  p.x["z"] = 10;
  assert(p.x["z"] == 10);
})())